--- a/Main.html
+++ b/Main.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <style type="text/css">
-            body { font-family:verdana; font-size: 10pt}
+            body { font-family:verdana; font-size: 10pt; padding: 20%}
         </style>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
         <script type="text/javascript" src="./src/Client.js"></script>
