--- a/contrib/hello-bayhac.html
+++ b/contrib/hello-bayhac.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head> <script type="text/javascript" src="./hello-world.js"></script></head>
+    <head> <script type="text/javascript" src="./hello-bayhac.js"></script></head>
     <body/>
 </html>
 
